Fix layout shift in Chrome mobile, closes #996 (#1000)
* Attempt using appendto

* Attempt second fix

* Attempted fixes with appendTo

* test tiny labels

* Revert attempts

* Revert other changes

* Tweaks

* Increment version

--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -2,8 +2,6 @@
 @import 'bootstrap/scss/variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
 
-$width: 320px;
-
 :host {
   display: flex;
   flex-direction: column;
@@ -14,7 +12,7 @@ $width: 320px;
 
   transition: transform 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99);
 
-  width: $width;
+  width: 322px;
   height: 100%;
 
   background-color: var(--surface-overlay);
@@ -48,7 +46,7 @@ $width: 320px;
 }
 
 .settings-container {
-  width: $width;
+  width: 320px;
 }
 
 /** Factory InputGroup styles */
